# software-development-project

./: .gitignore  README.md  pyproject.toml  tasks.py
documentation/: changelog.md  specification.md  timetracking.md
exercises/: week1.md
exercises/week2/payment_card/: pyproject.toml
exercises/week2/payment_card/src/: payment_card.py
exercises/week2/payment_card/src/tests/: __init__.py  payment_card_test.py
exercises/week2/unicafe/: .coveragerc  pyproject.toml
exercises/week2/unicafe/src/: main.py
exercises/week2/unicafe/src/tests/: payment_card_test.py
src/: main.py
src/game/: solitaire.py  text_game.py
src/tests/: solitaire_test.py
src/ui/: game_view.py  menu_view.py  result_view.py  ui.py
