[project]
name = "software-development-project"
version = "0.1.0"
description = ""
authors = [
    {name = "epicoderr",email = "nikolasrbinoski6@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"
invoke = "^2.2.0"

