[tool.poetry]
name = "payment-card"
version = "0.1.0"
description = ""
authors = ["epicoderr <nikolasrbinoski6@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

