[tool.poetry]
name = "payment-card"
version = "0.1.0"
description = ""
authors = ["epicoderr <nikolasrbinoski6@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9"